// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<main
  className="App"
>
  <h2
    className="welcome-message"
  >
    Take a
  </h2>
  <AcronymContainer
    findNextWords={[Function]}
    showKeywords={false}
    stages={null}
  />
</main>
`;

exports[`App should render KeywordContainer and Chalkboard if showKeywords is true 1`] = `
<main
  className="App"
>
  <AcronymContainer
    findNextWords={[Function]}
    showKeywords={true}
    stages={null}
  />
  <KeywordContainer
    chalkboardChecker={[Function]}
    findNextWords={[Function]}
    keywords={null}
    nextWords={null}
  />
  <Chalkboard
    chalkboardPhrases={Array []}
    currentPhrase=""
  />
</main>
`;
